--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,45 @@
 /* Import google fonts link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-body{
+body {
+    margin: 0;
+    padding: 0;
     font-family: 'Poppins', sans-serif;
-    font-size: 14px;    
+}
+
+.flexible-container {
+    height: 600px;
+    margin-bottom: 150px;
+}
+
+.donate-banner {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.donate-banner img {
+    width: 100%;
+    height: 100%;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.link-button {
+    text-decoration: none;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-weight: normal;
+    background-color: #ff5959;
+    padding: 15px 30px;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
