--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,62 @@ body {
     font-size: 18px;
     color: #B3B3B3;
 }
+
+.half-width {
+    width: 50%;
+    float: left;
+    margin: 40px;
+    padding: 2%;
+}
+
+
+.half-width img {
+    width: 80%;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.donate_plan{
+    margin-top: 150px;
+}
+
+.donate-plan{
+    font-size: 45px;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.donate-plann-p{
+    font-size: 18px;
+    color: #B3B3B3;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.plan img {
+    width: 20%;
+    margin-top: 5px;
+}
+
+#food {
+    height: 300px;
+    background: #4f9da61a;
+    border-radius: 5px;
+}
+
+#shelter {
+    height: 300px;
+    background: #ff59591a;
+    border-radius: 5px;
+}
+
+#education {
+    height: 300px;
+    background: #fff4d6;
+    border-radius: 5px;
+}
