--- a/css/style.css
+++ b/css/style.css
@@ -132,11 +132,11 @@ body {
     margin-bottom: 10px;
 }
 
-.donate_plan{
+.donate_plan {
     margin-top: 150px;
 }
 
-.donate-plan{
+.donate-plan {
     font-size: 45px;
     font-weight: 600;
     text-align: center;
@@ -144,7 +144,7 @@ body {
     margin-bottom: 20px;
 }
 
-.donate-plann-p{
+.donate-plann-p {
     font-size: 18px;
     color: #B3B3B3;
     margin-top: 20px;
@@ -175,4 +175,17 @@ body {
     height: 300px;
     background: #fff4d6;
     border-radius: 5px;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+footer h1 {
+    font-family: 'Lobster', cursive;
 }
